# mujoco_controllers

./: .gitmodules  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yaml
.github/workflows/: mujoco_controllers.yaml
mujoco-controllers/: debug.ipynb
mujoco_controllers/: README.md  __init__.py  build_env.py  debug.ipynb  diffik.py  franka_emika_controllers.ipynb  genetic_tuner.py  min_max.py  osc.py  ros2_effort_interface.py  ros2_position_interface.py  ros2_velocity_interface.py  trajectory.py
mujoco_controllers/config/: controller_tuning.yaml  itl_rearrangement.yaml  scene.yaml  transporter_data_collection.yaml
mujoco_controllers/config/arena/cameras/: transporter_data_collection.yaml
mujoco_controllers/config/arena/props/: default.yaml  single_block.yaml
mujoco_controllers/config/cameras/: default.yaml
mujoco_controllers/config/controllers/: osc.yaml
mujoco_controllers/config/props/: default.yaml
mujoco_controllers/config/robots/: default.yaml  motor.yaml  velocity.yaml
mujoco_controllers/config/robots/arm/: franka_emika_panda.yaml
mujoco_controllers/config/robots/arm/actuator_config/: intvelocity.yaml  velocity.yaml
mujoco_controllers/config/robots/arm/controller_config/: diffik.yaml  osc.yaml
mujoco_controllers/config/robots/end_effector/: robotiq_2f85.yaml
mujoco_controllers/config/task/: default.yaml  itl_rearrangement.yaml  tuning.yaml
mujoco_controllers/models/: robot_arm.py
mujoco_controllers/models/arms/: franka_emika.py
mujoco_controllers/models/end_effectors/: robotiq_2f85.py
